--- a/Cohorts.ipynb
+++ b/Cohorts.ipynb
@@ -668,17 +668,165 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 100,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# read the most recent file\n",
+    "df_MostRecentJHU = pd.read_csv(f\"{folderOfJHUData}{list(dailyUpdatesDict.values())[-1]}\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 101,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>FIPS</th>\n",
+       "      <th>Admin2</th>\n",
+       "      <th>Province_State</th>\n",
+       "      <th>Country_Region</th>\n",
+       "      <th>Last_Update</th>\n",
+       "      <th>Lat</th>\n",
+       "      <th>Long_</th>\n",
+       "      <th>Confirmed</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Recovered</th>\n",
+       "      <th>Active</th>\n",
+       "      <th>Combined_Key</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>45001.0</td>\n",
+       "      <td>Abbeville</td>\n",
+       "      <td>South Carolina</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-28 23:05:37</td>\n",
+       "      <td>34.223334</td>\n",
+       "      <td>-82.461707</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Abbeville, South Carolina, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>22001.0</td>\n",
+       "      <td>Acadia</td>\n",
+       "      <td>Louisiana</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-28 23:05:37</td>\n",
+       "      <td>30.295065</td>\n",
+       "      <td>-92.414197</td>\n",
+       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Acadia, Louisiana, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>51001.0</td>\n",
+       "      <td>Accomack</td>\n",
+       "      <td>Virginia</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-28 23:05:37</td>\n",
+       "      <td>37.767072</td>\n",
+       "      <td>-75.632346</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Accomack, Virginia, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>16001.0</td>\n",
+       "      <td>Ada</td>\n",
+       "      <td>Idaho</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-28 23:05:37</td>\n",
+       "      <td>43.452658</td>\n",
+       "      <td>-116.241552</td>\n",
+       "      <td>76</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Ada, Idaho, US</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>19001.0</td>\n",
+       "      <td>Adair</td>\n",
+       "      <td>Iowa</td>\n",
+       "      <td>US</td>\n",
+       "      <td>2020-03-28 23:05:37</td>\n",
+       "      <td>41.330756</td>\n",
+       "      <td>-94.471059</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Adair, Iowa, US</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      FIPS     Admin2  Province_State Country_Region          Last_Update  \\\n",
+       "0  45001.0  Abbeville  South Carolina             US  2020-03-28 23:05:37   \n",
+       "1  22001.0     Acadia       Louisiana             US  2020-03-28 23:05:37   \n",
+       "2  51001.0   Accomack        Virginia             US  2020-03-28 23:05:37   \n",
+       "3  16001.0        Ada           Idaho             US  2020-03-28 23:05:37   \n",
+       "4  19001.0      Adair            Iowa             US  2020-03-28 23:05:37   \n",
+       "\n",
+       "         Lat       Long_  Confirmed  Deaths  Recovered  Active  \\\n",
+       "0  34.223334  -82.461707          3       0          0       0   \n",
+       "1  30.295065  -92.414197          9       1          0       0   \n",
+       "2  37.767072  -75.632346          2       0          0       0   \n",
+       "3  43.452658 -116.241552         76       0          0       0   \n",
+       "4  41.330756  -94.471059          1       0          0       0   \n",
+       "\n",
+       "                    Combined_Key  \n",
+       "0  Abbeville, South Carolina, US  \n",
+       "1          Acadia, Louisiana, US  \n",
+       "2         Accomack, Virginia, US  \n",
+       "3                 Ada, Idaho, US  \n",
+       "4                Adair, Iowa, US  "
+      ]
+     },
+     "execution_count": 101,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_MostRecentJHU.head()"
+   ]
   },
   {
    "cell_type": "code",
